src/objects/ServiceCountryConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>AdminProfileId__c</fullName>
        <description>Add comma separated profile id&apos;s</description>
        <inlineHelpText>Add comma separated profile id&apos;s</inlineHelpText>
        <label>Admin Profile Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseCaseTabAfterFinish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close Case Tab After Finish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommunicationCustomer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Communication Customer Sample Text</description>
        <inlineHelpText>Communication Customer Sample Text</inlineHelpText>
        <label>Communication Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>TextBlock__c.Type__c</field>
                <operation>equals</operation>
                <value>Sample Text</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TextBlock__c</referenceTo>
        <relationshipLabel>Service Country Configurations (Communication Customer)</relationshipLabel>
        <relationshipName>CustomerServiceCountryConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommunicationStore__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Communication to Store</label>
        <referenceTo>TextBlock__c</referenceTo>
        <relationshipLabel>Service Country Configurations (Communication to Store)</relationshipLabel>
        <relationshipName>StoreServiceCountryConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommunicationSupplierClarification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Communication Supplier Sample Text</description>
        <inlineHelpText>Communication Supplier Sample Text</inlineHelpText>
        <label>Communication Supplier for Clarification</label>
        <referenceTo>TextBlock__c</referenceTo>
        <relationshipLabel>Service Country Configurations (Communication Supplier)</relationshipLabel>
        <relationshipName>CSupplierServiceCountryConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommunicationSupplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Communication Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>TextBlock__c.Type__c</field>
                <operation>equals</operation>
                <value>Sample Text</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TextBlock__c</referenceTo>
        <relationshipLabel>Service Country Configurations (Communication Supplier)</relationshipLabel>
        <relationshipName>Service_Country_Configurations4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommunicationSupplierforNotification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Communication Supplier Notification Sample Text</description>
        <inlineHelpText>Communication Supplier Notification Sample Text</inlineHelpText>
        <label>Communication Supplier for Notification</label>
        <referenceTo>TextBlock__c</referenceTo>
        <relationshipLabel>Service Country Configurations (Communication Supplier for Notification)</relationshipLabel>
        <relationshipName>NSupplierServiceCountryConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactInformationMaxContactMatches__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Max number of Contact maches compared to the input parameter. Default 10</description>
        <inlineHelpText>Max number of Contact maches compared to the input parameter. Default 10</inlineHelpText>
        <label>Contact Information Max Contact Matches</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefaultAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Country Configurations</relationshipLabel>
        <relationshipName>Service_Country_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DefaultCaseQueueDeveloperName__c</fullName>
        <label>Default Case Queue Developer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowUpDefaultDueTime__c</fullName>
        <label>Follow Up Default Due Time</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FollowUpQueueDeveloperName__c</fullName>
        <label>Follow Up Queue Developer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForwardBuyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Forward Buyer Sample Text</description>
        <inlineHelpText>Forward Buyer Sample Text</inlineHelpText>
        <label>Forward Buyer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>TextBlock__c.Type__c</field>
                <operation>equals</operation>
                <value>Sample Text</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>TextBlock__c</referenceTo>
        <relationshipLabel>Service Country Configurations (Forward Buyer)</relationshipLabel>
        <relationshipName>BuyerServiceCountryConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ForwardInsurance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Forward Insurance Sample Text</description>
        <inlineHelpText>Forward Insurance Sample Text</inlineHelpText>
        <label>Forward Insurance</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>TextBlock__c.Type__c</field>
                <operation>equals</operation>
                <value>Sample Text</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>TextBlock__c</referenceTo>
        <relationshipLabel>Service Country Configurations (Forward Insurance)</relationshipLabel>
        <relationshipName>InsuranceServiceCountryConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ForwardOthers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Forward Others</label>
        <referenceTo>TextBlock__c</referenceTo>
        <relationshipLabel>Service Country Configurations (Forward Others)</relationshipLabel>
        <relationshipName>Service_Country_Configurations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ForwardQA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Forward QA</label>
        <referenceTo>TextBlock__c</referenceTo>
        <relationshipLabel>Service Country Configurations (Forward QA)</relationshipLabel>
        <relationshipName>Service_Country_Configurations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ForwardRDCContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Forward RDC Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Country Configurations</relationshipLabel>
        <relationshipName>Service_Country_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ForwardRDC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Forward RDC Sample Text</description>
        <inlineHelpText>Forward RDC Sample Text</inlineHelpText>
        <label>Forward RDC</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>TextBlock__c.Type__c</field>
                <operation>equals</operation>
                <value>Sample Text</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TextBlock__c</referenceTo>
        <relationshipLabel>Service Country Configurations (Forward RDC)</relationshipLabel>
        <relationshipName>RDCServiceCountryConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InsuranceContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InsuranceContact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Country Configurations (InsuranceContact)</relationshipLabel>
        <relationshipName>Service_Country_Configurations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LetterFormat__c</fullName>
        <label>Letter format</label>
        <picklist>
            <picklistValues>
                <fullName>Letter</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>A4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductSearchColumns__c</fullName>
        <inlineHelpText>Must match exactly the Product2 Field Set API name</inlineHelpText>
        <label>Product Search Columns</label>
        <picklist>
            <picklistValues>
                <fullName>Product_Search_Columns_EU</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Product_Search_Columns_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product_Search_EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product_Search_US</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Second_Default_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Default Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Country Configurations (Second Default Account)</relationshipLabel>
        <relationshipName>Service_Country_Configurations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StoreDeveloperName__c</fullName>
        <label>Store Developer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StoreRecordTypeDeveloperName__c</fullName>
        <inlineHelpText>Enter the Developer Name of the RecordType that represents a Lidl Store.</inlineHelpText>
        <label>Store Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Country Configurations (Supplier Contact)</relationshipLabel>
        <relationshipName>Service_Country_Configurations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Country Configuration</label>
    <nameField>
        <label>BuyerServiceCountryConfigurations Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>